fix: layout shift
layout shifted while switching movie category to tv category

--- a/src/styles/category.module.css
+++ b/src/styles/category.module.css
@@ -1,8 +1,8 @@
 .moviesWrapper {
   width: 100%;
+  height: 370px;
 
   display: flex;
-  align-items: center;
 
   position: relative;
 }
@@ -24,6 +24,7 @@
   cursor: pointer;
 
   position: absolute;
+  top: 30%;
   transition: all 0.2s ease-in-out;
 }
 
